# filesense

./: .gitignore  GETTING_STARTED.md  README.md  build.sh  dev.sh  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
resources/: com.filesense.agent.plist  entitlements.plist
src/: app.html
src-python/: main.py  pyproject.toml  requirements.txt
src-python/app/api/: routes.py
src-python/app/core/: chunker.py  config.py  embeddings.py  extractor.py  optimizations.py
src-python/app/services/: indexer.py  search.py  store.py
src-python/tests/: test_chunker.py  test_embeddings.py  test_extractor.py  test_integration.py  test_optimizations.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Search.svelte  Settings.svelte  StatusBar.svelte  api.ts  shortcuts.ts
src/routes/: +layout.svelte  +page.svelte
